# YOLO-Mouse-Minipulation

./: README.md  config.ini  install instructions.md
firmware/: mouse_hid.ino
src/: main.cpp
yolo_mouse/: CMakeLists.txt
